<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="edit_message">Enter a messsage</string>
    <string name="quantity">quantity</string>
    <string name="number">0</string>
    <string name="order_button">order</string>
    <string name="price">price</string>
    <string name="amount">$0</string>
    <string name="add">+</string>
    <string name="minus">-</string>
</resources>
